Create variables specified in style-guide.md

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <!-- Links -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./stylesheets/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
   
   <!-- Misc -->
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
