--- a/index.html
+++ b/index.html
@@ -15,21 +15,33 @@
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
 </head>
 <body>
-  Learn to code by watching others
+  <h1>Learn to code by watching others</h1>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+  <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
 
-  Try it free 7 days then $20/mo. thereafter
+  <p>Try it free 7 days then $20/mo. thereafter</p>
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+  <form action="scripts/script.js" method="post">
+    <ol>
+      <li>
+        <input type="text" name="first-name" id="first-name" placeholder="First Name">
+      </li>
+      <li>
+        <input type="text" name="last-name" id="last-name" placeholder="Last Name">
+      </li>
+      <li>
+        <input type="email" name="email-address" id="email-address" placeholder="Email Address">
+      </li>
+      <li>
+        <input type="password" name="password" id="password" placeholder="Password">
+      </li>
+    </ol>
 
-  Claim your free trial 
+    <input type="button" value="Claim your free trial">
 
-  By clicking the button, you are agreeing to our Terms and Services
+    <small>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
+
+  </form>
   
   <!-- Footer -->
   <!-- <footer>
