--- a/index.html
+++ b/index.html
@@ -15,33 +15,46 @@
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
 </head>
 <body>
-  <h1>Learn to code by watching others</h1>
+  <div id="container" class="grid">
+    <!-- Header -->
+    <header>
+      <h1>Learn to code by watching others</h1>
 
-  <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+      <p>See how experienced developers solve problems in real-time. Watching scripted tutorials is great, but understanding how developers think is invaluable.</p>
+    </header>
 
-  <p>Try it free 7 days then $20/mo. thereafter</p>
+    <!-- Main -->
+    <main>
+      <p>Try it free 7 days then $20/mo. thereafter</p>
 
-  <form action="scripts/script.js" method="post">
-    <ol>
-      <li>
-        <input type="text" name="first-name" id="first-name" placeholder="First Name">
-      </li>
-      <li>
-        <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-      </li>
-      <li>
-        <input type="email" name="email-address" id="email-address" placeholder="Email Address">
-      </li>
-      <li>
-        <input type="password" name="password" id="password" placeholder="Password">
-      </li>
-    </ol>
+      <!-- Form -->
+      <form action="scripts/script.js" method="post">
 
-    <input type="button" value="Claim your free trial">
+        <!-- Input Fields -->
+        <ol>
+          <li>
+            <input type="text" name="first-name" id="first-name" placeholder="First Name">
+          </li>
+          <li>
+            <input type="text" name="last-name" id="last-name" placeholder="Last Name">
+          </li>
+          <li>
+            <input type="email" name="email-address" id="email-address" placeholder="Email Address">
+          </li>
+          <li>
+            <input type="password" name="password" id="password" placeholder="Password">
+          </li>
+        </ol>
 
-    <small>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
+        <!-- Button -->
+        <input type="button" value="Claim your free trial">
 
-  </form>
+        <!-- Terms and Conditions -->
+        <small>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
+
+      </form>
+    </div>
+  </main>
   
   <!-- Footer -->
   <!-- <footer>
