--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <link rel="stylesheet" href="./stylesheets/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
-  
+
+  <!-- Scripts -->
+  <script src="https://kit.fontawesome.com/d8d1809782.js" crossorigin="anonymous"></script>
+  <script src="./scripts/script.js" async defer></script>  
+
   <!-- Misc -->
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
 </head>
@@ -25,37 +29,53 @@
 
     <!-- Main -->
     <main>
-      <p>Try it free 7 days then $20/mo. thereafter</p>
+      <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
 
       <!-- Form -->
-      <form action="scripts/script.js" method="post">
+      <div id="form-container">
+        <form id="form" action="" method="post" autocomplete="off" novalidate>
 
-        <!-- Input Fields -->
-        <ol>
-          <li>
-            <input type="text" name="first-name" id="first-name" placeholder="First Name">
-          </li>
-          <li>
-            <input type="text" name="last-name" id="last-name" placeholder="Last Name">
-          </li>
-          <li>
-            <input type="email" name="email-address" id="email-address" placeholder="Email Address">
-          </li>
-          <li>
-            <input type="password" name="password" id="password" placeholder="Password">
-          </li>
-        </ol>
+          <!-- Form Controls -->
+          <div class="form-control">
+            <input type="text" name="first-name" id="first-name" placeholder="First Name" aria-label="First Name">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+          </div>
 
-        <!-- Button -->
-        <input type="button" value="Claim your free trial">
+          <div class="form-control">
+            <input type="text" name="last-name" id="last-name" placeholder="Last Name" aria-label="Last Name">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+          </div>
 
-        <!-- Terms and Conditions -->
-        <small>By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
+          <div class="form-control">
+            <input type="email" name="email-address" id="email-address" placeholder="Email Address" aria-label="Email Address">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+          </div>
 
-      </form>
-    </div>
-  </main>
-  
+          <div class="form-control">
+            <input type="password" name="password" id="password" placeholder="Password" aria-label="Password">
+            <i class="fas fa-check-circle"></i>
+            <i class="fas fa-exclamation-circle"></i>
+            <small>Error message</small>
+          </div>
+
+          <!-- Button -->
+          <input id="submit" type="submit" value="Claim your free trial">
+          <!-- <button type="submit">Claim your free trial</button> -->
+
+          <!-- Terms and Conditions -->
+          <small id="terms-and-conditions">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
+
+        </form>
+      </div>
+    </main>
+  </div>
+
   <!-- Footer -->
   <!-- <footer>
     <p class="attribution">
