Style elements contained in <header>

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
 
   <!-- Scripts -->
-  <script src="https://kit.fontawesome.com/d8d1809782.js" crossorigin="anonymous"></script>
-  <script src="./scripts/script.js" async defer></script>  
+  <script src="https://kit.fontawesome.com/d8d1809782.js" crossorigin="anonymous"></script>  
 
   <!-- Misc -->
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
@@ -29,7 +28,7 @@
 
     <!-- Main -->
     <main>
-      <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
+      <p>Try it free 7 days then $20/mo. thereafter</p>
 
       <!-- Form -->
       <div id="form-container">
@@ -66,7 +65,6 @@
 
           <!-- Button -->
           <input id="submit" type="submit" value="Claim your free trial">
-          <!-- <button type="submit">Claim your free trial</button> -->
 
           <!-- Terms and Conditions -->
           <small id="terms-and-conditions">By clicking the button, you are agreeing to our <a href="#">Terms and Services</a></small>
