Style elements contained in <main>

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <!-- Main -->
     <main>
-      <p>Try it free 7 days then $20/mo. thereafter</p>
+      <p><span>Try it free 7 days</span> then $20/mo. thereafter</p>
 
       <!-- Form -->
       <div id="form-container">
