Style elements contained in <form>

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!-- Scripts -->
   <script src="https://kit.fontawesome.com/d8d1809782.js" crossorigin="anonymous"></script>  
+  <script src="./scripts/script.js" async defer></script>
 
   <!-- Misc -->
   <title>Frontend Mentor | Intro component with Sign-Up Form</title>
